--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Registrate"></activity>
+        <activity android:name=".CategoriasP"></activity>
+        <activity android:name=".Registrate" />
         <activity android:name=".Login" />
         <activity android:name=".MainActivity">
             <intent-filter>
