--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CatChocolates"></activity>
+        <activity android:name=".catCaramelos"></activity>
+        <activity android:name=".CatChocolates" />
         <activity android:name=".Tienda" />
         <activity android:name=".CategoriasP" />
         <activity android:name=".Carrito" />
