--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,25 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".SplashScreen">
 
-
-        <activity android:name=".Tienda"></activity>
-=======
-        <activity android:name=".CategoriasP"></activity>
->>>>>>> dev.v1.1
-=======
-        <activity android:name=".Carrito"></activity>
->>>>>>> dev.v2.1
-        <activity android:name=".Registrate" />
-        <activity android:name=".Login" />
-        <activity android:name=".DetalleProducto" />
-        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+    <activity android:name=".Tienda" ></activity>
+    <activity android:name=".CategoriasP" ></activity>
+    <activity android:name=".Carrito"></activity>
+    <activity android:name=".Registrate" ></activity>
+    <activity android:name=".Login" ></activity>
+    <activity android:name=".DetalleProducto" ></activity>
+    <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
