--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<<<<<<< HEAD
-        <activity android:name=".catCaramelos"></activity>
-        <activity android:name=".CatChocolates" />
-        <activity android:name=".Tienda" />
-        <activity android:name=".CategoriasP" />
-        <activity android:name=".Carrito" />
-        <activity android:name=".Registrate" />
-        <activity android:name=".Login" />
-        <activity android:name=".DetalleProducto" />
-        <activity android:name=".MainActivity">
-=======
+
         <activity android:name=".SplashScreen">
 
->>>>>>> dev.v3.2
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,6 +19,8 @@
             </intent-filter>
         </activity>
     <activity android:name=".Tienda" ></activity>
+     <activity android:name=".catCaramelos"></activity>
+     <activity android:name=".CatChocolates" ></activity>
     <activity android:name=".CategoriasP" ></activity>
     <activity android:name=".Carrito"></activity>
     <activity android:name=".Registrate" ></activity>
